added blog component

--- a/store/src/default/shared/components/footer/footer.component.html
+++ b/store/src/default/shared/components/footer/footer.component.html
@@ -11,7 +11,7 @@
             <div class="footer-menu-item"><a mat-button routerLink="/privacy-policy">Pricavy policy</a></div>
 
             <h3 class="col-title mt-3">JOIN OUR COMMUNITY</h3>
-            <div class="footer-menu-item"><a mat-button>Blog</a></div>
+            <div class="footer-menu-item"><a mat-button routerLink="/blog">Blog</a></div>
             <div class="footer-menu-item"><a mat-button>Instagram</a></div>
             <div class="footer-menu-item"><a mat-button>Facebook</a></div>
             <div class="footer-menu-item"><a mat-button>Tiktok</a></div>
